==> NineDayCC/HeadTracker_ESP32/headtracker/src/icm42688/icm42688.c <==
#include <zephyr/kernel.h>
#include <zephyr/device.h>
#include <zephyr/sys/util.h>
#include <zephyr/drivers/spi.h>
#include <zephyr/logging/log.h>
#include "icm42688.h"
#define REG_SPI_READ_BIT BIT(7)
#define ICM426XX_RA_REG_BANK_SEL 0x76
#define ICM426XX_BANK_SELECT0 0x00
#define ICM426XX_BANK_SELECT1 0x01
#define ICM426XX_BANK_SELECT2 0x02
#define ICM426XX_BANK_SELECT3 0x03
#define ICM426XX_BANK_SELECT4 0x04
#define ICM426XX_RA_PWR_MGMT0 0x4E // User Bank 0
#define ICM426XX_PWR_MGMT0_ACCEL_MODE_LN (3 << 0)
#define ICM426XX_PWR_MGMT0_GYRO_MODE_LN (3 << 2)
#define ICM426XX_PWR_MGMT0_GYRO_ACCEL_MODE_OFF ((0 << 0) | (0 << 2))
#define ICM426XX_PWR_MGMT0_TEMP_DISABLE_OFF (0 << 5)
#define ICM426XX_PWR_MGMT0_TEMP_DISABLE_ON (1 << 5)
#define ICM426XX_RA_GYRO_CONFIG0 0x4F
#define ICM426XX_RA_ACCEL_CONFIG0 0x50
#define ICM426XX_RA_GYRO_CONFIG_STATIC3 0x0C  // User Bank 1
#define ICM426XX_RA_GYRO_CONFIG_STATIC4 0x0D  // User Bank 1
#define ICM426XX_RA_GYRO_CONFIG_STATIC5 0x0E  // User Bank 1
#define ICM426XX_RA_ACCEL_CONFIG_STATIC2 0x03 // User Bank 2
#define ICM426XX_RA_ACCEL_CONFIG_STATIC3 0x04 // User Bank 2
#define ICM426XX_RA_ACCEL_CONFIG_STATIC4 0x05 // User Bank 2
#define ICM426XX_RA_GYRO_ACCEL_CONFIG0 0x52 // User Bank 0
#define ICM426XX_ACCEL_UI_FILT_BW_LOW_LATENCY (15 << 4)
#define ICM426XX_GYRO_UI_FILT_BW_LOW_LATENCY (15 << 0)
#define ICM426XX_RA_GYRO_DATA_X1 0x25  // User Bank 0
#define ICM426XX_RA_ACCEL_DATA_X1 0x1F // User Bank 0

static inline int spi_write_register(const struct device *dev, uint8_t reg, uint8_t data)
{
    const struct spi_buf buf[2] = {
        {
            .buf = &reg,
            .len = 1,
        },
        {
            .buf = &data,
            .len = 1,
        }};

    const struct spi_buf_set tx = {
        .buffers = buf,
        .count = 2,
    };

    return spi_write(dev, &spi_cfg, &tx);
}

static inline int spi_read_register(const struct device *dev, uint8_t reg, uint8_t *data,
                                    size_t len)
{
    uint8_t tx_buffer = REG_SPI_READ_BIT | reg;

    const struct spi_buf tx_buf = {
        .buf = &tx_buffer,
        .len = 1,
    };

    const struct spi_buf_set tx = {
        .buffers = &tx_buf,
        .count = 1,
    };

    struct spi_buf rx_buf[2] = {
        {
            .buf = NULL,
            .len = 1,
        },
        {
            .buf = data,
            .len = len,
        }};

    const struct spi_buf_set rx = {
        .buffers = rx_buf,
        .count = 2,
    };

    return spi_transceive(dev, &spi_cfg, &tx, &rx);
}

static void turnGyroAccOn(const struct device *dev)
{
    spi_write_register(dev, ICM426XX_RA_PWR_MGMT0, ICM426XX_PWR_MGMT0_TEMP_DISABLE_OFF | ICM426XX_PWR_MGMT0_ACCEL_MODE_LN | ICM426XX_PWR_MGMT0_GYRO_MODE_LN);
    k_busy_wait(1000);
}

int icm42688_Init(const struct device *dev)
{
    int ret = 0;
    // Turn off ACC and GYRO so they can be configured
    // See section 12.9 in ICM-42688-P datasheet v1.7
    setUserBank(dev, ICM426XX_BANK_SELECT0);
    turnGyroAccOff(dev);

    // Configure gyro Anti-Alias Filter (see section 5.3 "ANTI-ALIAS FILTER")
    aafConfig_t aafConfig = getGyroAafConfig(AAF_CONFIG_258HZ);
    setUserBank(dev, ICM426XX_BANK_SELECT1);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC3, aafConfig.delt);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC4, aafConfig.deltSqr & 0xFF);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC5, (aafConfig.deltSqr >> 8) | (aafConfig.bitshift << 4));

    // Configure acc Anti-Alias Filter for 1kHz sample rate (see tasks.c)
    aafConfig = getGyroAafConfig(AAF_CONFIG_258HZ);
    setUserBank(dev, ICM426XX_BANK_SELECT2);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC2, aafConfig.delt << 1);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC3, aafConfig.deltSqr & 0xFF);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC4, (aafConfig.deltSqr >> 8) | (aafConfig.bitshift << 4));

    // Configure gyro and acc UI Filters
    setUserBank(dev, ICM426XX_BANK_SELECT0);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_ACCEL_CONFIG0, ICM426XX_ACCEL_UI_FILT_BW_LOW_LATENCY | ICM426XX_GYRO_UI_FILT_BW_LOW_LATENCY);

    // Configure interrupt pin
    // ret |= spi_write_register(dev, ICM426XX_RA_INT_CONFIG, ICM426XX_INT1_MODE_PULSED | ICM426XX_INT1_DRIVE_CIRCUIT_PP | ICM426XX_INT1_POLARITY_ACTIVE_HIGH);
    // ret |= spi_write_register(dev, ICM426XX_RA_INT_CONFIG0, ICM426XX_UI_DRDY_INT_CLEAR_ON_SBR);

    // ret |= spi_write_register(dev, ICM426XX_RA_INT_SOURCE0, ICM426XX_UI_DRDY_INT1_EN_ENABLED);

    // uint8_t intConfig1Value = spiReadRegMsk(dev, ICM426XX_RA_INT_CONFIG1);
    // // Datasheet says: "User should change setting to 0 from default setting of 1, for proper INT1 and INT2 pin operation"
    // intConfig1Value &= ~(1 << ICM426XX_INT_ASYNC_RESET_BIT);
    // intConfig1Value |= (ICM426XX_INT_TPULSE_DURATION_8 | ICM426XX_INT_TDEASSERT_DISABLED);

    // ret |= spi_write_register(dev, ICM426XX_RA_INT_CONFIG1, intConfig1Value);

    ret |= spi_write_register(dev, ICM426XX_RA_INT_SOURCE0, ICM426XX_UI_DRDY_INT1_EN_DISABLED);

    // Turn on gyro and acc on again so ODR and FSR can be configured
    turnGyroAccOn(dev);

    // Set acc/gryo full scale and odr
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG0, acc_fs << 5 | (acc_odr & 0x0F));
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG0, gyr_fs << 5 | (gyr_odr & 0x0F));

    if (ret != 0)
    {
        LOG_ERR("ICM42688 int failed Code:%d.", ret);
    }
    else
        LOG_DBG("ICM42688 int Success.");
    /*
     * Accelerometer sensor need at least 10ms startup time
     * Gyroscope sensor need at least 30ms startup time
     */
    k_msleep(50);
    return ret;
}
