==> NineDayCC/HeadTracker_ESP32/lib/icm42688/icm42688.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/spi_master.h"
#include "esp_log.h"
#include "icm42688.h"
#define REG_SPI_READ_BIT 0x80
#define SPI_RX_MAX_SIZE 4 * 4  //SPI receive buffer max size. greater than acc(2 bytes * 3) + gyro(2 bytes * 3). 32 bits alignment require
#define ICM426XX_RA_REG_BANK_SEL 0x76
#define ICM426XX_BANK_SELECT0 0x00
#define ICM426XX_BANK_SELECT1 0x01
#define ICM426XX_BANK_SELECT2 0x02
#define ICM426XX_BANK_SELECT3 0x03
#define ICM426XX_BANK_SELECT4 0x04
#define ICM426XX_RA_PWR_MGMT0 0x4E // User Bank 0
#define ICM426XX_PWR_MGMT0_ACCEL_MODE_LN (3 << 0)
#define ICM426XX_PWR_MGMT0_GYRO_MODE_LN (3 << 2)
#define ICM426XX_PWR_MGMT0_GYRO_ACCEL_MODE_OFF ((0 << 0) | (0 << 2))
#define ICM426XX_PWR_MGMT0_TEMP_DISABLE_OFF (0 << 5)
#define ICM426XX_PWR_MGMT0_TEMP_DISABLE_ON (1 << 5)
#define ICM426XX_RA_GYRO_CONFIG0 0x4F
#define ICM426XX_RA_ACCEL_CONFIG0 0x50
#define ICM426XX_RA_GYRO_CONFIG_STATIC3 0x0C  // User Bank 1
#define ICM426XX_RA_GYRO_CONFIG_STATIC4 0x0D  // User Bank 1
#define ICM426XX_RA_GYRO_CONFIG_STATIC5 0x0E  // User Bank 1
#define ICM426XX_RA_ACCEL_CONFIG_STATIC2 0x03 // User Bank 2
#define ICM426XX_RA_ACCEL_CONFIG_STATIC3 0x04 // User Bank 2
#define ICM426XX_RA_ACCEL_CONFIG_STATIC4 0x05 // User Bank 2
#define ICM426XX_RA_GYRO_ACCEL_CONFIG0 0x52 // User Bank 0
#define ICM426XX_ACCEL_UI_FILT_BW_LOW_LATENCY (15 << 4)
#define ICM426XX_GYRO_UI_FILT_BW_LOW_LATENCY (15 << 0)

static int spi_write_register(spi_device_handle_t dev, uint8_t reg, uint8_t data)
{
    spi_transaction_t trans = {0};
    trans.tx_data[0] = reg;
    trans.tx_data[1] = data;
    trans.length = 8 * 2;   // 8bits * 2
    trans.flags = SPI_TRANS_USE_TXDATA;
    return spi_device_polling_transmit(dev, &trans);
}

static int spi_read_register(spi_device_handle_t dev, uint8_t reg, uint8_t *data,
                                    size_t len)
{
    spi_transaction_t trans = {0};
    esp_err_t ret = 0;

    // When using SPI_TRANS_CS_KEEP_ACTIVE, bus must be locked/acquired
    spi_device_acquire_bus(dev, portMAX_DELAY);

    trans.tx_data[0] = REG_SPI_READ_BIT | reg;      // set register address and set read flag
    trans.length = 8;
    trans.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_CS_KEEP_ACTIVE;
    ret |= spi_device_polling_transmit(dev, &trans); // send address first
    assert(ret == ESP_OK);

    memset(trans.tx_data, 0 , 4);   // send empty bytes for burst reads
    trans.rxlength = 4;
    trans.length = 8 * 4;   // rx length = tx length in full duplex mode
    trans.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA | SPI_TRANS_CS_KEEP_ACTIVE;

    for (; len > 4; len -= 4)
    {
        if (len == 4) trans.flags &= ~SPI_TRANS_CS_KEEP_ACTIVE; // if this is the last reading, inactive cs when done
        spi_device_polling_transmit(dev, &trans);
        memcpy(data, trans.rx_data, 4);
        data += 4;
    }

    // read the part less than 4 bytes
    if (len > 0)
    {
        trans.flags &= ~SPI_TRANS_CS_KEEP_ACTIVE;
        ret |= spi_device_polling_transmit(dev, &trans);
        assert(ret == ESP_OK);
        memcpy(data, trans.rx_data, len);
    }

    spi_device_release_bus(dev);        // must realease before exit

    if (ret)
    {
        ESP_LOGW(IMU_TAG, "SPI READ ERR(%xd)", ret);
    }

    return ret;
}

static void turnGyroAccOn(spi_device_handle_t dev)
{
    spi_write_register(dev, ICM426XX_RA_PWR_MGMT0, ICM426XX_PWR_MGMT0_TEMP_DISABLE_OFF | ICM426XX_PWR_MGMT0_ACCEL_MODE_LN | ICM426XX_PWR_MGMT0_GYRO_MODE_LN);
    vTaskDelay(pdMS_TO_TICKS(1));
}

int icm42688_Init(spi_device_handle_t dev)
{
    int ret = 0;
    uint8_t ID = 0;
    //check who am I
    ret |= spi_read_register(dev, MPU_RA_WHO_AM_I, &ID, 1);
    ESP_LOGI(IMU_TAG,"WHO AM I ID:0x%x", ID);
    if (ID != 0x47) // ICM42688 ID is 0x47
    {
        ESP_LOGE(IMU_TAG,"WHO_AM_I ID not match:0x%x", ID);
        return ESP_ERR_INVALID_MAC;
    }

    // Turn off ACC and GYRO so they can be configured
    // See section 12.9 in ICM-42688-P datasheet v1.7
    setUserBank(dev, ICM426XX_BANK_SELECT0);
    turnGyroAccOff(dev);

    // Configure gyro Anti-Alias Filter (see section 5.3 "ANTI-ALIAS FILTER")
    aafConfig_t aafConfig = getGyroAafConfig(AAF_CONFIG_258HZ);
    setUserBank(dev, ICM426XX_BANK_SELECT1);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC3, aafConfig.delt);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC4, aafConfig.deltSqr & 0xFF);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG_STATIC5, (aafConfig.deltSqr >> 8) | (aafConfig.bitshift << 4));

    // Configure acc Anti-Alias Filter for 1kHz sample rate (see tasks.c)
    aafConfig = getGyroAafConfig(AAF_CONFIG_258HZ);
    setUserBank(dev, ICM426XX_BANK_SELECT2);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC2, aafConfig.delt << 1);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC3, aafConfig.deltSqr & 0xFF);
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG_STATIC4, (aafConfig.deltSqr >> 8) | (aafConfig.bitshift << 4));

    // Configure gyro and acc UI Filters
    setUserBank(dev, ICM426XX_BANK_SELECT0);
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_ACCEL_CONFIG0, ICM426XX_ACCEL_UI_FILT_BW_LOW_LATENCY | ICM426XX_GYRO_UI_FILT_BW_LOW_LATENCY);

    ret |= spi_write_register(dev, ICM426XX_RA_INT_SOURCE0, ICM426XX_UI_DRDY_INT1_EN_DISABLED);

    // Turn on gyro and acc on again so ODR and FSR can be configured
    turnGyroAccOn(dev);

    // Set acc/gryo full scale and odr
    ret |= spi_write_register(dev, ICM426XX_RA_ACCEL_CONFIG0, acc_fs << 5 | (acc_odr & 0x0F));
    ret |= spi_write_register(dev, ICM426XX_RA_GYRO_CONFIG0, gyr_fs << 5 | (gyr_odr & 0x0F));

    if (ret != 0)
    {
        ESP_LOGE(IMU_TAG, "ICM42688 int failed Code:%d.", ret);
    }
    else
        ESP_LOGI(IMU_TAG, "ICM42688 int Success.");
    /*
     * Accelerometer sensor need at least 10ms startup time
     * Gyroscope sensor need at least 30ms startup time
     */
    vTaskDelay(pdMS_TO_TICKS(50));
    return ret;
}
